--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
+    <link rel="icon" type="image/x-icon" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>K1 Logistics</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+    <!-- Navbar -->
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper white">
+                    <a href="index.html" class="brand-logo text-shadow"><img class="logo-image" src="images/k1-logistics-logo.webp" alt="K1 Logistics logo"></a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+                    <ul class="right hide-on-med-and-down text-shadow">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contact_us.html">Conact Us</a></li>
+                        <li><a href="about_us.html">About Us</a></li>
+                        <li><a href="shipping.html">Shipping</a></li>
+                        <li><a href="storage.html">Storage</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+<!-- mobile side nav -->
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="#" class="center-align purple-text text-darken-3">
+                <h4>K1 Logistics ltd</h4>
+            </a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact_us.html">Conact Us</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="shipping.html">Shipping</a></li>
+        <li><a href="storage.html">Storage</a></li>
+    </ul>
+
+<main>
+
+</main>
+<!-- footer -->
+    <footer class="page-footer purple darken-3">
+        <div class="footer-copyright">
+            <div class="container">
+                <p class="center-align">© Copyright K1 Logistics Ltd 2010. All Rights Reserved.  All Trademarks Acknowledged.</p>
+                <p class="center-align">Registered In England & Wales Company No: 06904872 Address: K1 Logistics Ltd, SunHouse, Unit 9, Llantrisant Business Park, Llantrisant, CF72 8LF.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="scripts/script.js"></script>
+
 </body>
+
 </html>
