--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="images/k1-logistics-logo.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
@@ -45,7 +45,17 @@
     </ul>
 
 <main>
-
+    <h2 class="center-align">Welcome to K1 Logistics</h2>
+    <h4 class="center-align">We store and ship nation-wide</h4>
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="btn">Contact Us</div>
+        </div>
+        <div class="col s12 m6">
+            <div class="btn">about us</div>
+        </div>
+    </div>
+    
 </main>
 <!-- footer -->
     <footer class="page-footer purple darken-3">
