--- a/index.html
+++ b/index.html
@@ -46,16 +46,41 @@
 
 <main>
     <h2 class="center-align">Welcome to K1 Logistics</h2>
-    <h4 class="center-align">We store and ship nation-wide</h4>
-    <div class="row">
-        <div class="col s12 m6">
-            <div class="btn">Contact Us</div>
+    <div class="row card-panel grey lighten-5">
+        <div class="row center-align">
+            <div class="col s12">
+                <img class="image-size" src="images/k1-lorry-driving.jpg" alt="K1 lorry driving on the motor way">
+            </div>
+            <div class="col s12 m6">
+                <p class="center-align blurb-font-size">With over 20 years in the transport, haulage and warehousing industry, 
+                    K1 Logistics is the right partner for your business. 
+                    Operating from it's own 54,000 square foot storage facility, at Llantrisant in South Wales, 
+                    close to the M4 and major access routes, we have the capacity, 
+                    experience and skills to handle your company's logistics - ensuring you always deliver on time.
+                </p>
+            </div>
+            <div class="col s12 m6">
+                <p class="center-align blurb-font-size">
+                    Operating a substantial modern fleet of vehicles, ranging from light courier vans to articulated trucks, 
+                    no job is too large or small for K1 Logistics. 
+                    Our courier fleet can provide same day national transport services for urgent or valuable items, 
+                    with a dedicated driver from departure to arrival, while our articulated fleet can handle full loads, 
+                    partial loads and groupage to anywhere within the United Kingdom.
+                </p>
+            </div>
         </div>
-        <div class="col s12 m6">
-            <div class="btn">about us</div>
+        <div class="row center-align">
+            
         </div>
+        <div class="center-align">
+            <img class="image-size" src="images/rha.jpg" alt="K1 is RHA certified">
+            <p><strong>K1 Logistics are proud<br>
+                members of the<br>
+                Road Haulage Association<br>
+                </strong>
+            </p>
+            </div>
     </div>
-    
 </main>
 <!-- footer -->
     <footer class="page-footer purple darken-3">
