--- a/contact_us.html
+++ b/contact_us.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>K1 Logistics</title>
 </head>
@@ -22,8 +23,7 @@
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                     <ul class="right hide-on-med-and-down text-shadow">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="contact_us.html">Conact Us</a></li>
-                        <li><a href="about_us.html">About Us</a></li>
+                        <li><a href="contact_us.html">Contact Us</a></li>
                         <li><a href="shipping.html">Shipping</a></li>
                         <li><a href="storage.html">Storage</a></li>
                     </ul>
@@ -38,14 +38,80 @@
                 <h4>K1 Logistics ltd</h4>
             </a></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact_us.html">Conact Us</a></li>
-        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="contact_us.html">Contact Us</a></li>
         <li><a href="shipping.html">Shipping</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
 
 <main>
-
+    <h3 class="ml-2 text-align-center uppercase">Get in Touch:</h3>
+    <div class="divider"></div>
+    <div class="mt-5 container">
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s12 m6">
+                    <input  id="first_name" type="text" class="validate">
+                    <label class="ml-2" for="first_name">Your Name</label>
+                    </div>
+                    <div class="input-field col s12 m6">
+                    <input id="business_name" type="text" class="validate">
+                    <label class="ml-2" for="business_name">Business Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                    <input id="email" type="email" class="validate">
+                    <label class="ml-2" for="email">Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                    <input id="phone_number" type="tel" class="validate">
+                    <label class="ml-2" for="phone_number">Phone Number</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                    <div class="input-field inline">
+                        <textarea id="message_input" name="message" type="message" class="validate resize-off" maxlength="850" rows="10" cols="250"></textarea>
+                        <div id="the-count">
+                            <span id="current">0</span>
+                            <span id="maximum">/ 850</span>
+                        </div>
+                        <label id="message_input_label" class="ml-2" for="message_input">How can we help?</label>
+                    </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <button class="btn waves-effect waves-light purple darken-3" type="submit" name="action">Submit
+                            <i class="fa-solid fa-paper-plane"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="address-container">
+        <div class="card">
+            <div class="card-content">
+                <div class="row">
+                    <h4 class="col s12 pb-2"><strong>K1 Logistics Ltd</strong></h4>
+                    <div id="address-info" class="col s12 pl-2 pb-2">
+                        SunHouse <br>
+                        Unit 9 <br>
+                        Llantrisant Business Park <br>
+                        Llantrisant <br>
+                        CF72 8LF <br>
+                    </div>
+                    <div class="col s12"><strong>Tel:</strong> 01443 887866</div>
+                    <div class="col s12"><strong>Email (General):</strong> info@k1logistics.co.uk</div>
+                    <div class="col s12"><strong>Email (Traffic):</strong> traffic@k1logistics.co.uk</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 <!-- footer -->
     <footer class="page-footer purple darken-3">
@@ -61,5 +127,4 @@
     <script src="scripts/script.js"></script>
 
 </body>
-
 </html>
