--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
-    <link rel="icon" type="image/x-icon" href="images/k1-logistics-logo.webp">
+    <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>K1 Logistics</title>
 </head>
@@ -22,8 +23,7 @@
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                     <ul class="right hide-on-med-and-down text-shadow">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="contact_us.html">Conact Us</a></li>
-                        <li><a href="about_us.html">About Us</a></li>
+                        <li><a href="contact_us.html">Contact Us</a></li>
                         <li><a href="shipping.html">Shipping</a></li>
                         <li><a href="storage.html">Storage</a></li>
                     </ul>
@@ -39,7 +39,6 @@
             </a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact_us.html">Conact Us</a></li>
-        <li><a href="about_us.html">About Us</a></li>
         <li><a href="shipping.html">Shipping</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
