FEAT: stylised the sites font and ordered some more images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- mobile side nav -->
     <ul class="sidenav" id="mobile-demo">
         <li><a href="#" class="center-align purple-text text-darken-3">
-                <h4>K1 Logistics ltd</h4>
+                <h5>K1 Logistics ltd</h5>
             </a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact_us.html">Conact Us</a></li>
@@ -44,22 +44,26 @@
     </ul>
 
 <main>
-    <h2 class="center-align">Welcome to K1 Logistics</h2>
-    <div class="row card-panel grey lighten-5">
+    <div class="container">
+
         <div class="row center-align">
             <div class="col s12">
-                <img class="image-size" src="images/k1-lorry-driving.jpg" alt="K1 lorry driving on the motor way">
+                <img class="landing-page-image" src="images/TranscodedWallpaper.jpg" alt="K1 lorry driving on the motor way">
             </div>
+        </div>
+        <div class="row">        
             <div class="col s12 m6">
-                <p class="center-align blurb-font-size">With over 20 years in the transport, haulage and warehousing industry, 
+                <p class="blurb-font-size">With over 20 years in the transport, haulage and warehousing industry, 
                     K1 Logistics is the right partner for your business. 
                     Operating from it's own 54,000 square foot storage facility, at Llantrisant in South Wales, 
                     close to the M4 and major access routes, we have the capacity, 
                     experience and skills to handle your company's logistics - ensuring you always deliver on time.
                 </p>
             </div>
+        </div>
+        <div class="row">        
             <div class="col s12 m6">
-                <p class="center-align blurb-font-size">
+                <p class="blurb-font-size">
                     Operating a substantial modern fleet of vehicles, ranging from light courier vans to articulated trucks, 
                     no job is too large or small for K1 Logistics. 
                     Our courier fleet can provide same day national transport services for urgent or valuable items, 
@@ -67,19 +71,16 @@
                     partial loads and groupage to anywhere within the United Kingdom.
                 </p>
             </div>
-        </div>
-        <div class="row center-align">
-            
-        </div>
-        <div class="center-align">
-            <img class="image-size" src="images/rha.jpg" alt="K1 is RHA certified">
-            <p><strong>K1 Logistics are proud<br>
-                members of the<br>
-                Road Haulage Association<br>
-                </strong>
-            </p>
+            <div class="col s12 m6 center-align ">
+                <img class="image-size" src="images/rha.jpg" alt="K1 is RHA certified">
+                <p><strong>K1 Logistics are proud<br>
+                    members of the<br>
+                    Road Haulage Association<br>
+                    </strong>
+                </p>
             </div>
-    </div>
+        </div>
+        </div>
 </main>
 <!-- footer -->
     <footer class="page-footer purple darken-3">
