--- a/storage.html
+++ b/storage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
+    <meta name="description" content="K1 logistics transports all over the UK and has a storage unit based in south wales">
     <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -16,7 +16,7 @@
 <body>
     <header>
     <!-- Navbar -->
-        <div class="navbar-fixed">
+        <div class="navbar-fixed italic">
             <nav>
                 <div class="nav-wrapper white">
                     <a href="index.html" class="brand-logo text-shadow"><img class="logo-image" src="images/k1-logistics-logo.webp" alt="K1 Logistics logo"></a>
@@ -33,7 +33,7 @@
     </header>
 
 <!-- mobile side nav -->
-    <ul class="sidenav" id="mobile-demo">
+    <ul class="sidenav italic" id="mobile-demo">
         <li><a href="#" class="center-align purple-text text-darken-3">
                 <h5>K1 Logistics ltd</h5>
             </a></li>
@@ -44,7 +44,41 @@
     </ul>
 
 <main>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col s12 m-d-none">
+                <span>
+                    <img class="feature-image" src="images/TranscodedWallpaper.jpg" alt="">
+                </span>
+            </div>
+            <div class="col s12 m6 l4">
+                <h5 class="ml-minus-1 italic">Storage & Warehousing</h5>
+                    <p class="font-size-sm">K1 Logistics has a large complex of storage facilities available at it's disposal, located in South Wales, just minutes from the M4.</p>
 
+                    <ul aria-label="Flexible Storage Solutions">
+                        <li class="font-size-sm">Palletised, Boxed or Non-Standard storage available</li>
+                        <li class="font-size-sm">Quick access always available to any stock</li>
+                        <li class="font-size-sm">Narrow aisle high bay racking for maximum storage capacity at minimal cost</li>
+                    </ul>
+
+                    <ul aria-label="Logistics & Stock Control">
+                        <li class="font-size-sm">Bespoke, sophisticated stock control software, unique to K1 Logistics</li>
+                        <li class="font-size-sm">Multiple stock control reports available to all customers at any time</li>
+                        <li class="font-size-sm">Stock movement audit trail ensures security for all stock items</li>
+                    </ul>
+                    <ul aria-label="Security">
+                        <li class="font-size-sm">First class 24 hour recorded CCTV system</li>
+                        <li class="font-size-sm">Monitored alarms protect all our premises</li>
+                        <li class="font-size-sm">Most warehouses with 24 hour security guarding</li>
+                    </ul>
+            </div>
+            <div class="col s12 m6 l4 offset-l4 s-d-none">
+                <span>
+                    <img class="feature-image" src="images/k1-loading-bay.jpg" alt="">
+                </span>
+            </div>
+        </div>
+    </div>
 </main>
 <!-- footer -->
     <footer class="page-footer purple darken-3">
