--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
+    <meta name="description" content="K1 logistics transports all over the UK and has a storage unit based in south wales">
     <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -38,7 +38,7 @@
                 <h5>K1 Logistics ltd</h5>
             </a></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact_us.html">Conact Us</a></li>
+        <li><a href="contact_us.html">Contact Us</a></li>
         <li><a href="shipping.html">Shipping</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
