--- a/contact_us.html
+++ b/contact_us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
+    <meta name="description" content="K1 logistics transports all over the UK and has a storage unit based in south wales">
     <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -97,17 +97,24 @@
         <div class="card">
             <div class="card-content">
                 <div class="row">
-                    <h4 class="col s12 pb-2"><strong>K1 Logistics Ltd</strong></h4>
-                    <div id="address-info" class="col s12 pl-2 pb-2">
-                        SunHouse <br>
-                        Unit 9 <br>
-                        Llantrisant Business Park <br>
-                        Llantrisant <br>
-                        CF72 8LF <br>
+                    <div class="col s12 m6 text-align-center">
+                        <h4 class="pb-2"><strong>K1 Logistics Ltd</strong></h4>
+                        <div id="address-info" class="pl-2 pb-2">
+                            SunHouse <br>
+                            Unit 9 <br>
+                            Llantrisant Business Park <br>
+                            Llantrisant <br>
+                            CF72 8LF <br>
+                        </div>
+                        <div><strong>Tel:</strong> 01443 887866</div>
+                        <div><strong>Email (General):</strong> info@k1logistics.co.uk</div>
+                        <div><strong>Email (Traffic):</strong> traffic@k1logistics.co.uk</div>
                     </div>
-                    <div class="col s12"><strong>Tel:</strong> 01443 887866</div>
-                    <div class="col s12"><strong>Email (General):</strong> info@k1logistics.co.uk</div>
-                    <div class="col s12"><strong>Email (Traffic):</strong> traffic@k1logistics.co.uk</div>
+                    <div class="col s12 m6">
+                        <div >
+                            <iframe title="interactiveMap" id="interactive-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps/ms?msid=216281097150248729849.0004841087a8de78b545f&amp;msa=0&amp;hl=en&amp;ie=UTF8&amp;t=m&amp;ll=51.553167,-3.378296&amp;spn=0.256169,0.411987&amp;z=10&amp;output=embed"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
