FIX: Corrected the page to display the shipping information

--- a/shipping.html
+++ b/shipping.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Books and scrolls is a website for avid readers who want a suggestion for a new book/series to read, with affliate links directly to a place to buy the books and also be able to suggest books to other people when they make an account.">
+    <meta name="description" content="K1 logistics transports all over the UK and has a storage unit based in south wales">
     <link rel="icon" type="image/x-icon" href="/images/k1-favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -52,24 +52,27 @@
                 </span>
             </div>
             <div class="col s12 m6 l4">
-                <h5 class="ml-minus-1 italic">Storage & Warehousing</h5>
-                    <p class="font-size-sm">K1 Logistics has a large complex of storage facilities available at it's disposal, located in South Wales, just minutes from the M4.</p>
+                <h5 class="ml-minus-1 italic">Transport & Haulage</h5>
+                    <p class="font-size-sm">K1 Logistics operate a substantial fleet of vehicles and our team of professional, experienced drivers and support staff are able to offer our customers a first class delivery service throughout the United Kingdom.</p>
 
-                    <ul aria-label="Flexible Storage Solutions">
-                        <li class="font-size-sm">Palletised, Boxed or Non-Standard storage available</li>
-                        <li class="font-size-sm">Quick access always available to any stock</li>
-                        <li class="font-size-sm">Narrow aisle high bay racking for maximum storage capacity at minimal cost</li>
+                    <ul aria-label="Vehicles">
+                        <li class="font-size-sm">Artics, rigids and express vans</li>
+                        <li class="font-size-sm">Highest standard of maintenance by our own workshops</li>
+                        <li class="font-size-sm">Trailers can be used with customer's own livery and branding</li>
                     </ul>
 
-                    <ul aria-label="Logistics & Stock Control">
-                        <li class="font-size-sm">Bespoke, sophisticated stock control software, unique to K1 Logistics</li>
-                        <li class="font-size-sm">Multiple stock control reports available to all customers at any time</li>
-                        <li class="font-size-sm">Stock movement audit trail ensures security for all stock items</li>
+                    <ul aria-label="Drivers">
+                        <li class="font-size-sm">Experienced and professional drivers</li>
+                        <li class="font-size-sm">Always in company uniform</li>
                     </ul>
-                    <ul aria-label="Security">
-                        <li class="font-size-sm">First class 24 hour recorded CCTV system</li>
-                        <li class="font-size-sm">Monitored alarms protect all our premises</li>
-                        <li class="font-size-sm">Most warehouses with 24 hour security guarding</li>
+                    <ul aria-label="Services">
+                        <li class="font-size-sm">First class delivery service within mainland UK and Northern Ireland</li>
+                        <li class="font-size-sm">Groupage, full loads and timed deliveries</li>
+                    </ul>
+                    <ul aria-label="Computer Controlled Logistics">
+                        <li class="font-size-sm">Fully equipped traffic office utilising the latest computer systems</li>
+                        <li class="font-size-sm">K1 Logistics use in-house developed LMS logistics software unique to us</li>
+                        <li class="font-size-sm">Direct communication with drivers at all times</li>
                     </ul>
             </div>
             <div class="col s12 m6 l4 offset-l4 s-d-none">
