FIX: Changed wording on shipping page to say transport, and layout of storage.html and shiping.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="right hide-on-med-and-down text-shadow">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
-                        <li><a href="shipping.html">Shipping</a></li>
+                        <li><a href="shipping.html">Transport</a></li>
                         <li><a href="storage.html">Storage</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
             </a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact_us.html">Contact Us</a></li>
-        <li><a href="shipping.html">Shipping</a></li>
+        <li><a href="shipping.html">Transport</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
 
@@ -48,7 +48,7 @@
 
         <div class="row center-align">
             <div class="col s12">
-                <img class="landing-page-image" src="images/TranscodedWallpaper.jpg" alt="K1 lorry driving on the motor way">
+                <img class="landing-page-image" src="images/k1-front-office.jpg" alt="K1 lorry driving on the motor way">
             </div>
         </div>
         <div class="row">        
