--- a/contact_us.html
+++ b/contact_us.html
@@ -24,7 +24,7 @@
                     <ul class="right hide-on-med-and-down text-shadow">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
-                        <li><a href="shipping.html">Shipping</a></li>
+                        <li><a href="shipping.html">Transport</a></li>
                         <li><a href="storage.html">Storage</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
             </a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact_us.html">Contact Us</a></li>
-        <li><a href="shipping.html">Shipping</a></li>
+        <li><a href="shipping.html">Transport</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
 
