--- a/shipping.html
+++ b/shipping.html
@@ -24,7 +24,7 @@
                     <ul class="right hide-on-med-and-down text-shadow">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
-                        <li><a href="shipping.html">Shipping</a></li>
+                        <li><a href="shipping.html">Transport</a></li>
                         <li><a href="storage.html">Storage</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
             </a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact_us.html">Contact Us</a></li>
-        <li><a href="shipping.html">Shipping</a></li>
+        <li><a href="shipping.html">Transport</a></li>
         <li><a href="storage.html">Storage</a></li>
     </ul>
 
@@ -51,7 +51,7 @@
                     <img class="feature-image" src="images/TranscodedWallpaper.jpg" alt="">
                 </span>
             </div>
-            <div class="col s12 m6 l4">
+            <div class="col s12 m6">
                 <h5 class="ml-minus-1 italic">Transport & Haulage</h5>
                     <p class="font-size-sm">K1 Logistics operate a substantial fleet of vehicles and our team of professional, experienced drivers and support staff are able to offer our customers a first class delivery service throughout the United Kingdom.</p>
 
@@ -75,7 +75,7 @@
                         <li class="font-size-sm">Direct communication with drivers at all times</li>
                     </ul>
             </div>
-            <div class="col s12 m6 l4 offset-l4 s-d-none">
+            <div class="col s12 m6 s-d-none">
                 <span>
                     <img class="feature-image" src="images/k1-loading-bay.jpg" alt="">
                 </span>
